--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -25,13 +25,13 @@ services:
       - "8080:8080"
     environment:
       SPRING_DATA_MONGODB_HOST: mongodb
-      SPRING_DATA_MONGODB_PORT: 27017
+      SPRING_DATA_MONGODEB_PORT: 27017
       SPRING_DATA_MONGODB_DATABASE: tutor_desk
       SPRING_DATA_MONGODB_USERNAME: admin
       SPRING_DATA_MONGODB_PASSWORD: password123
       SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE: admin
-      MAIL_USERNAME: ${MAIL_USERNAME}
-      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      MAIL_USERNAME: ${MAIL_USERNAME:}
+      MAIL_PASSWORD: ${MAIL_PASSWORD:}
     depends_on:
       - mongodb
     networks:
