--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,40 +1,20 @@
-# Use OpenJDK 17 as base image
-FROM openjdk:17-jdk-slim
-
-# Set working directory
+# Build stage
+FROM eclipse-temurin:17-jdk-jammy AS build
 WORKDIR /app
 
-# Copy the Maven wrapper and pom.xml
-COPY mvnw .
+COPY mvnw ./
 COPY .mvn .mvn
-COPY pom.xml .
-
-# Make mvnw executable
-RUN chmod +x mvnw
-
-# Download dependencies
-RUN ./mvnw dependency:go-offline -B
-
-# Copy source code
+COPY pom.xml ./
 COPY src src
 
-# Build the application
+RUN chmod +x mvnw
 RUN ./mvnw clean package -DskipTests
 
-# Create a new stage for runtime
-FROM openjdk:17-jre-slim
-
-# Set working directory
+# Runtime stage
+FROM eclipse-temurin:17-jre-jammy
 WORKDIR /app
 
-# Copy the built JAR from the build stage
-COPY --from=0 /app/target/*.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 
-# Expose port
 EXPOSE 8080
-
-# Set environment variables
-ENV JAVA_OPTS="-Xmx512m -Xms256m"
-
-# Run the application
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
