--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,23 +17,36 @@ services:
     networks:
       - tutor-desk-network
 
-  tutor-desk-app:
-    build: .
-    container_name: tutor-desk-app
+  backend:
+    build:
+      context: ./backend
+    container_name: tutor-desk-backend
     restart: unless-stopped
     ports:
       - "8080:8080"
     environment:
       SPRING_DATA_MONGODB_HOST: mongodb
-      SPRING_DATA_MONGODEB_PORT: 27017
+      SPRING_DATA_MONGODB_PORT: 27017
       SPRING_DATA_MONGODB_DATABASE: tutor_desk
       SPRING_DATA_MONGODB_USERNAME: admin
       SPRING_DATA_MONGODB_PASSWORD: password123
       SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE: admin
-      MAIL_USERNAME: ${MAIL_USERNAME:}
-      MAIL_PASSWORD: ${MAIL_PASSWORD:}
+      MAIL_USERNAME: ${MAIL_USERNAME:-admin}
+      MAIL_PASSWORD: ${MAIL_PASSWORD:-password123}
     depends_on:
       - mongodb
+    networks:
+      - tutor-desk-network
+
+  frontend:
+    build:
+      context: ./frontend
+    container_name: tutor-desk-frontend
+    restart: unless-stopped
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
     networks:
       - tutor-desk-network
 
